fixed change password inputs width to aligned with username and email inputs

--- a/login/static/css/style.css
+++ b/login/static/css/style.css
@@ -96,6 +96,22 @@ input {
 	width: 100%;
 }
 
+.edit-password_form{
+	width: 100%;
+	padding: 0 0;
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
+	height: 100%;
+	text-align: center;
+
+}
+
+
+
 .container {
 	background-color: #fff;
 	border-radius: 10px;
